fix z-index lol

--- a/site/_less/partials/modal.less
+++ b/site/_less/partials/modal.less
@@ -8,7 +8,7 @@
   bottom: 0;
   left: 0;
   transition: opacity 400ms ease-in-out;
-  z-index: 10;
+  z-index: 9001; /* lol */
 
   &.visible {
     opacity: 1;
